Complete implementation of 'Change Size' button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
     <button class="size-changer">Change Size</button>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
