Add 'Toggle Gridline' functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <div class="container"></div>
 
-    <button class="size-changer">Change Size</button>
+    <div class="buttons">
+        <button class="size-changer">Change Size</button>
+        <button class="grid-remover">Toggle Gridlines</button>
+    </div>
 
     <script src="script.js" defer></script>
 </body>
